--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "commander": "^7.1.0",
     "graphql": "^15.5.0",
-    "graphql-request": "^3.4.0"
+    "graphql-request": "^3.4.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1"
   }
 }
